[package]
name = "RustLayeredSyscallFiberShellcodeLoader"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Threading", "Win32_System_Memory", "Win32_Foundation"] }
rust-veh-syscalls = { git = "https://github.com/safedv/RustVEHSyscalls" }
rc4 = "0.1.0"
winapi = { version = "*", features = ["errhandlingapi", "libloaderapi", "memoryapi", "psapi", "processthreadsapi", "windef", "winnt", "winuser","winnt", "ntdef", "minwindef", "basetsd", "handleapi", "processthreadsapi", "winbase", "memoryapi"] }
cryptify = "3.1.1"